# pocketsphinx.js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  live-demo-chinese.html  live-demo-kws.html  live-demo.html  params.json  server.py
am/rm1_200/: feat.params  mdef  means  mixture_weights  noisedict  sendump  transition_matrices  variances
doc/AudioRecorder/: README.md
js/: audioRecorder.js  audioRecorderWorker.js  recognizer.js  webapp.js
platform/include/: config.h
pocketsphinx/: Makefile.in  aclocal.m4  configure  pocketsphinx.sln
pocketsphinx/doc/: Makefile.in
pocketsphinx/group/: ABLD.BAT  README  batch.mmp  bld.inf  continuous.mmp  pocketsphinx.mmp
pocketsphinx/include/: Makefile.in
pocketsphinx/python/: Makefile.in
pocketsphinx/src/: Makefile.in
pocketsphinx/test/: Makefile.in
sphinxbase/: .bzrignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  sphinxbase.sln
sphinxbase/debian.maemo/: changelog  control  copyright  docs  libsphinxbase-dev.install  rules  sphinx_fe.1  sphinxbase-utils.manpages
sphinxbase/debian.ubuntu/: changelog  control  copyright  rules  sphinx_fe.1  sphinx_jsgf2fsg.1  sphinx_lm_convert.1  sphinx_lm_eval.1  sphinxbase-utils.manpages  watch
sphinxbase/doc/: Makefile.am  Makefile.in  doxyfile.in
sphinxbase/group/: ABLD.BAT  bld.inf  sphinxbase.mmp
sphinxbase/include/: Makefile.in  sphinx_config.h  sphinx_config.h.in
sphinxbase/include/android/: config.h  sphinx_config.h
sphinxbase/include/s60/: sphinx_config.h
sphinxbase/include/sphinxbase/: Makefile.am  Makefile.in  ad.h  bio.h  ckd_alloc.h  cmd_ln.h  err.h  fe.h  feat.h  filename.h  info.h  jsgf.h  matrix.h  ngram_model.h  unlimit.h
sphinxbase/include/win32/: config.h  sphinx_config.h
sphinxbase/include/wince/: sphinx_config.h
sphinxbase/python/: Makefile.am  Makefile.in  hufftest2.py  sb_test.py  setup.py.in  setup_win32.py  sphinxbase.c  sphinxbase.pxd  sphinxbase.pyx
sphinxbase/src/: Makefile.in
sphinxbase/src/libsphinxad/: Makefile.am  Makefile.in  ad_alsa.c  ad_jack.c  ad_pulse.c  ad_s60.cpp  ad_win32.c  play_win32.c  rec_win32.c
sphinxbase/src/libsphinxbase/: Makefile.in
sphinxbase/src/libsphinxbase/fe/: Makefile.am  Makefile.in  fe_design.txt  fe_interface.c  fe_internal.h  fe_noise.c  fe_noise.h  fe_prespch_buf.c  fe_prespch_buf.h  fe_sigproc.c  fe_warp.c  fixlog.c
sphinxbase/src/libsphinxbase/feat/: Makefile.in  agc.c  cmn.c  cmn_prior.c  feat.c
sphinxbase/src/libsphinxbase/lm/: Makefile.am  Makefile.in  _jsgf_scanner.l  fsg_model.c  jsgf.c  jsgf_internal.h  jsgf_scanner.c  jsgf_scanner.h  lm3g_templates.c  ngram_model.c  ngram_model_arpa.c  ngram_model_set.c
sphinxbase/src/libsphinxbase/util/: Makefile.am  Makefile.in  bio.c  ckd_alloc.c  cmd_ln.c  dtoa.c  err.c  err_wince.c  errno.c  filename.c  hash_table.c  info.c  mmio.c  pio.c  profile.c  unlimit.c  utf8.c
sphinxbase/src/sphinx_adtools/: Makefile.am  Makefile.in  cont_fileseg.c  cont_seg.c  sphinx_pitch.c
sphinxbase/src/sphinx_cepview/: Makefile.in  main_cepview.c
sphinxbase/src/sphinx_fe/: Makefile.am  Makefile.in  sphinx_fe.c
sphinxbase/src/sphinx_jsgf2fsg/: Makefile.in  main.c
sphinxbase/src/sphinx_lmtools/: Makefile.am  Makefile.in  sphinx_lm_eval.c
sphinxbase/swig/: cmd_ln.i  fsg_model.i  iterators.i  java.i  jsgf.i  ngram_model.i  python.i  sphinxbase.i  typemaps.i
sphinxbase/swig/python/: Makefile.am
sphinxbase/test/: Makefile.in
sphinxbase/test/regression/: Makefile.am  Makefile.in  chan3-dither.cepview  chan3-logspec.cepview  chan3-smoothspec.cepview  chan3.cepview  chan3.logspec  chan3.mfc
sphinxbase/test/unit/: Makefile.in
sphinxbase/test/unit/test_ad/: Makefile.in  test_ad_read.c
sphinxbase/test/unit/test_alloc/: Makefile.in
sphinxbase/test/unit/test_bitvec/: Makefile.in  test_bitvec.c
sphinxbase/test/unit/test_case/: Makefile.in
sphinxbase/test/unit/test_cmdln/: Makefile.am  Makefile.in  _test_parse_badargs.test
sphinxbase/test/unit/test_fe/: Makefile.in  test_fe.c
sphinxbase/test/unit/test_feat/: Makefile.in
sphinxbase/test/unit/test_fsg/: Makefile.in  test_fsg_jsgf.c
sphinxbase/test/unit/test_hash/: Makefile.in
sphinxbase/test/unit/test_lineiter/: Makefile.in
sphinxbase/test/unit/test_logmath/: Makefile.in
sphinxbase/test/unit/test_matrix/: Makefile.in
sphinxbase/test/unit/test_ngram/: Makefile.am  Makefile.in  test_lm_casefold.c  test_lm_score.c
sphinxbase/test/unit/test_string/: Makefile.in  strtest.c
sphinxbase/test/unit/test_thread/: Makefile.am  Makefile.in  test_tls_log.c
sphinxbase/test/unit/test_util/: Makefile.am  Makefile.in  test_filename.c
sphinxbase/win32/sphinx_cepview/: sphinx_cepview.vcxproj
sphinxbase/win32/sphinx_fe/: sphinx_fe.vcxproj
sphinxbase/win32/sphinx_jsgf2fsg/: sphinx_jsgf2fsg.vcxproj
sphinxbase/win32/sphinx_lm_convert/: sphinx_lm_convert.vcxproj
sphinxbase/win32/sphinx_pitch/: sphinx_pitch.vcxproj
sphinxbase/win32/sphinx_seg/: sphinx_seg.vcxproj
sphinxbase/win32/sphinxbase/: sphinxbase.vcxproj  sphinxbase.vcxproj.filters
src/: pocketsphinxjs-config.h.in  pocketsphinxjs.cpp  pocketsphinxjsImpl.cpp  pocketsphinxjsImpl.h  psRecognizer.cpp  psRecognizer.h
stylesheets/: stylesheet.css
tests/: README.md  karma_pocketsphinx.js_initialized_recognizer.conf.js  karma_pocketsphinx.js_initializing_recognizer.conf.js  karma_pocketsphinx.js_initializing_with_parameters_recognizer.conf.js  karma_pocketsphinx.js_reinitializing_recognizer.conf.js  karma_pocketsphinx.js_reinitializing_recognizer_with_params.conf.js  karma_pocketsphinx.js_unitialized_recognizer.conf.js  main.cpp  test_suite.html  test_suite_CN.html  test_suite_kws.html  test_suite_zh.html
tests/js/: pocketsphinx.js.test.html  pocketsphinx.js_test_initialized_recognizer.js  pocketsphinx.js_test_initializing_recognizer.js  pocketsphinx.js_test_initializing_with_params_recognizer.js  pocketsphinx.js_test_reinitializing_recognizer.js  pocketsphinx.js_test_uninitialized_recognizer.js  tests.js  (+4 more)
webapp/: index.html  kws.dict  kws.txt  live.html  live_kws.html  live_zh.html
(+31 files in other folders)
